--- a/CameraKsPropertyHelper/CameraKsPropertyHelper.vcxproj
+++ b/CameraKsPropertyHelper/CameraKsPropertyHelper.vcxproj
@@ -136,10 +136,13 @@
     <ClInclude Include="BackgroundSegmentationMaskMetadata.h" />
     <ClInclude Include="BackgroundSegmentationPropertyPayload.h" />
     <ClInclude Include="BasicExtendedPropertyPayload.h" />
+    <ClInclude Include="DigitalWindowConfigCaps.h" />
+    <ClInclude Include="DigitalWindowConfigCapsPayload.h" />
     <ClInclude Include="DigitalWindowMetadata.h" />
     <ClInclude Include="FaceDetectionMetadata.h" />
     <ClInclude Include="KSHelper.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="PhotoModePropertyPayload.h" />
     <ClInclude Include="PropertyInquiry.h" />
     <ClInclude Include="VidCapVideoProcAmpPropetyPayload.h" />
   </ItemGroup>
